framec_tests/language_specific/typescript/v3_validator/positive/terminal_last_transition.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                // native prelude
                -> $B()
            }
        }
}

