framec_tests/language_specific/typescript/v3_validator/negative/transition_state_arity_mismatch.frm
@target typescript
// @expect: E405

system S {
    machine:
        $A {
            e() {
                -> $B(1, 2, 3)
            }
        }
        $B(x, y) { }
}

